--- a/styles.css
+++ b/styles.css
@@ -405,3 +405,19 @@ footer li.signup-link a:hover {
 	background: url('assets/img/tile.jpg') top left repeat;
 }
 
+/* Custome Icon Sprites */
+
+i.ci {
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background: url('assets/img/icon-sprite.png') no-repeat;
+}
+
+.ci.ci-computer 	{ background-position: 0 0; }
+.ci.ci-watch		{ background-position: -40px 0; }
+.ci.ci-calendar		{ background-position: -80px 0; }
+.ci.ci-community	{ background-position: -120px 0; }
+.ci.ci-instructor	{ background-position: -160px 0; }
+.ci.ci-device		{ background-position: -200px 0; }
+
